--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <section class="header-section">
-            <div class="container py-5">
+            <div class="container py-4">
                 <div class="col-12 d-flex flex-wrap gap-4 justify-content-between">
                     <div>
                         <div class="text-light fs-3 fw-semibold">ELECTRO FORMING</div>
@@ -24,7 +24,7 @@
 
 
                     <div>
-                        <img width="105" height="80" class="img-fluid" src="images/logo.png" alt="">
+                        <img width="200" height="200" class="img-fluid" src="images/logo.png" alt="">
                     </div>
 
                 </div>
@@ -39,7 +39,7 @@
 
                         
                         <div class="products-grid__item">
-                            <div>
+                            <div class="products-grid__item-img-wrapper">
                                 <img class="img-fluid" src="images/SFIDOL001-001.jpg" alt="">
                             </div>
                             <div>
@@ -52,7 +52,7 @@
                             </div>
                         </div>
                         <div class="products-grid__item">
-                            <div>
+                            <div class="products-grid__item-img-wrapper">
                                 <img class="img-fluid" src="images/SFIDOL001-002.jpg" alt="">
                             </div>
                             <div>
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                         <div class="products-grid__item">
-                            <div>
+                            <div class="products-grid__item-img-wrapper">
                                 <img class="img-fluid" src="images/SFIDOL001-002A.jpg" alt="">
                             </div>
                             <div>
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                         <div class="products-grid__item">
-                            <div>
+                            <div class="products-grid__item-img-wrapper">
                                 <img class="img-fluid" src="images/SFIDOL002-001.jpg" alt="">
                             </div>
                             <div>
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <div class="products-grid__item">
-                            <div>
+                            <div class="products-grid__item-img-wrapper">
                                 <img class="img-fluid" src="images/SFIDOL002-002.jpg" alt="">
                             </div>
                             <div>
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                         <div class="products-grid__item">
-                            <div>
+                            <div class="products-grid__item-img-wrapper">
                                 <img class="img-fluid" src="images/SFIDOL002-002A.jpg" alt="">
                             </div>
                             <div>
