--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <img class="img-fluid" src="images/SFIDOL001-001.jpg" alt="">
                             </div>
                             <div>
-                                <div>SFIDOL001-001
+                                <div class="fw-semibold">SFIDOL001-001
                                 </div>
                                 <div class="fw-semibold">Ganesh</div>
                                 <div><span class="fw-semibold">Weight: </span>82g</div>
@@ -56,7 +56,7 @@
                                 <img class="img-fluid" src="images/SFIDOL001-002.jpg" alt="">
                             </div>
                             <div>
-                                <div>SFIDOL001-002
+                                <div class="fw-semibold">SFIDOL001-002
                                 </div>
                                 <div class="fw-semibold">Lakshmi</div>
                                 <div><span class="fw-semibold">Weight: </span>40g</div>
@@ -69,7 +69,7 @@
                                 <img class="img-fluid" src="images/SFIDOL001-002A.jpg" alt="">
                             </div>
                             <div>
-                                <div>SFIDOL001-002A
+                                <div class="fw-semibold">SFIDOL001-002A
                                 </div>
                                 <div class="fw-semibold">Lakshmi</div>
                                 <div><span class="fw-semibold">Weight: </span>40g</div>
@@ -82,7 +82,7 @@
                                 <img class="img-fluid" src="images/SFIDOL002-001.jpg" alt="">
                             </div>
                             <div>
-                                <div>SFIDOL001-001
+                                <div class="fw-semibold">SFIDOL001-001
                                 </div>
                                 <div class="fw-semibold">Ganesh</div>
                                 <div><span class="fw-semibold">Weight: </span>13g</div>
@@ -95,7 +95,7 @@
                                 <img class="img-fluid" src="images/SFIDOL002-002.jpg" alt="">
                             </div>
                             <div>
-                                <div>SFIDOL002-002
+                                <div class="fw-semibold">SFIDOL002-002
                                 </div>
                                 <div class="fw-semibold">Ganesh</div>
                                 <div><span class="fw-semibold">Weight: </span>33g</div>
@@ -108,7 +108,7 @@
                                 <img class="img-fluid" src="images/SFIDOL002-002A.jpg" alt="">
                             </div>
                             <div>
-                                <div>SFIDOL002-002A
+                                <div class="fw-semibold">SFIDOL002-002A
                                 </div>
                                 <div class="fw-semibold">Ganesh</div>
                                 <div><span class="fw-semibold">Weight: </span>33g</div>
@@ -123,7 +123,7 @@
                                 <img class="img-fluid" src="images/SFIDOL001-001.jpg" alt="">
                             </div>
                             <div>
-                                <div>SFIDOL001-001
+                                <div class="fw-semibold">SFIDOL001-001
                                 </div>
                                 <div class="fw-semibold">Ganesh</div>
                                 <div><span class="fw-semibold">Weight: </span>82g</div>
@@ -136,7 +136,7 @@
                                 <img class="img-fluid" src="images/SFIDOL001-002.jpg" alt="">
                             </div>
                             <div>
-                                <div>SFIDOL001-002
+                                <div class="fw-semibold">SFIDOL001-002
                                 </div>
                                 <div class="fw-semibold">Lakshmi</div>
                                 <div><span class="fw-semibold">Weight: </span>40g</div>
@@ -149,7 +149,7 @@
                                 <img class="img-fluid" src="images/SFIDOL001-002A.jpg" alt="">
                             </div>
                             <div>
-                                <div>SFIDOL001-002A
+                                <div class="fw-semibold">SFIDOL001-002A
                                 </div>
                                 <div class="fw-semibold">Lakshmi</div>
                                 <div><span class="fw-semibold">Weight: </span>40g</div>
@@ -162,7 +162,7 @@
                                 <img class="img-fluid" src="images/SFIDOL002-001.jpg" alt="">
                             </div>
                             <div>
-                                <div>SFIDOL001-001
+                                <div class="fw-semibold">SFIDOL001-001
                                 </div>
                                 <div class="fw-semibold">Ganesh</div>
                                 <div><span class="fw-semibold">Weight: </span>13g</div>
@@ -175,7 +175,7 @@
                                 <img class="img-fluid" src="images/SFIDOL002-002.jpg" alt="">
                             </div>
                             <div>
-                                <div>SFIDOL002-002
+                                <div class="fw-semibold">SFIDOL002-002
                                 </div>
                                 <div class="fw-semibold">Ganesh</div>
                                 <div><span class="fw-semibold">Weight: </span>33g</div>
@@ -188,7 +188,7 @@
                                 <img class="img-fluid" src="images/SFIDOL002-002A.jpg" alt="">
                             </div>
                             <div>
-                                <div>SFIDOL002-002A
+                                <div class="fw-semibold">SFIDOL002-002A
                                 </div>
                                 <div class="fw-semibold">Ganesh</div>
                                 <div><span class="fw-semibold">Weight: </span>33g</div>
